# kudosy

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.claude/: settings.json
.github/scripts/: check_module_coverage.py
.github/workflows/: ci.yaml  docker-publish.yaml  release-please.yaml  release.yaml
data/: config.example.yaml
src/kudosy/: __init__.py  __main__.py  app.py  auth.py  decision.py  effective_config.py  engine.py  feed.py  humanizer.py  logging_conf.py  models.py  notify.py  parsers.py  quiet_hours.py  routes.py  scheduler.py  settings.py  sport_types.py  stat_parse.py  store.py  strava_client.py  update_check.py
src/kudosy/static/: api.js  app.js  athletes.js  auth.js  backup.js  config.js  dom.js  feed.js  format.js  i18n.js  index.html  main.js  schedule-matrix.js  settings.js  state.js  stats.js  status.js  styles.css  tabs.js  theme.js
src/kudosy/static/assets/: site.webmanifest
tests/: conftest.py
tests/api/: test_auth_state.py  test_backup.py  test_routes.py
tests/fixtures/: athlete_page.html  athlete_search.html  csrf_page.html  feed_following.json  feed_react_props.html  feed_sample.html
tests/integration/: test_engine.py  test_store.py  test_strava_client.py
tests/unit/: test_auth.py  test_decision.py  test_digest_state.py  test_effective_config.py  test_engine_auth.py  test_engine_backoff.py  test_engine_cache.py  test_feed.py  test_feed_parse.py  test_humanizer.py  test_i18n_keys.py  test_log_broadcast.py  test_notify.py  test_parsers.py  test_quiet_hours.py  test_run_history.py  test_scheduler.py  test_scheduler_digest.py  test_settings.py  test_sport_types.py  test_stat_parse.py  test_store_activity_cache.py  test_store_kudoed.py  test_strava_client.py  test_update_check.py
